<resources>
    <string name="app_name">avchatkit</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="empty">""</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="save">保存</string>
    <string name="online">正在直播</string>

    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>w

    <!-- video call -->
    <string name="avchat_hangup">结束通话</string>
    <string name="avchat_switch_to_video">切换视频</string>
    <string name="avchat_switch_to_audio">切换语音</string>
    <string name="avchat_video_call_request">请求视频聊天…</string>
    <string name="avchat_audio_call_wifi_unavailable_tip">当前非WiFi环境，每分钟将产生约0.5M的流量</string>
    <string name="avchat_network_grade_0">网络通畅：</string>
    <string name="avchat_network_grade_1">网络正常：</string>
    <string name="avchat_network_grade_2">网络一般：</string>
    <string name="avchat_network_grade_3">网络较差：</string>
    <string name="avchat_refuse">拒绝</string>
    <string name="avchat_receive">开启</string>
    <string name="avchat_pickup">接听</string>
    <string name="avchat_net_error_then_quit">网络异常，通话结束</string>
    <string name="avchat_call_finish">通话结束</string>
    <string name="avchat_call_reject">被对方拒绝</string>
    <string name="avchat_peer_protocol_low_version">对方版本过低，请提示对方升级</string>
    <string name="avchat_local_protocol_low_version">版本过低，请升级后使用</string>
    <string name="avchat_invalid_channel_id">对方已挂断</string>
    <string name="avchat_local_call_busy">本地通话中，无法使用易信进行通话。</string>
    <string name="avchat_peer_busy">对方正在通话中，请稍后再拨。</string>
    <string name="avchat_wait_recieve">等待对方接听…</string>
    <string name="avchat_audio_call_request">请求通话</string>
    <string name="avchat_connecting">连接中…</string>
    <string name="avchat_audio_to_video_invitation">对方邀请你开启视频聊天…</string>
    <string name="avchat_network_unstable_notificaton">当前网络不稳定</string>
    <string name="avchat_peer_close_camera">对方关闭了摄像头</string>
    <string name="avchat_local_close_camera">你关闭了摄像头</string>
    <string name="avchat_audio_to_video_wait">正在等待对方开启摄像头…</string>
    <string name="avchat_no_pick_up">未接听</string>
    <string name="avchat_has_hangup">已挂断</string>
    <string name="avchat_switch_video_reject">对方不同意音频切换为视频！</string>
    <string name="avchat_notification">正在与%1$s通话中，点击继续</string>
    <string name="avchat_call">网络通话</string>
    <string name="avchat_no_pickup_call">未接听</string>
    <string name="avchat_call_failed">发起通话失败</string>
    <string name="avchat_no_permission">暂无权限，请开通音视频服务</string>
    <string name="avchat_in_switch">请耐心等待！</string>

    <!-- team video call -->
    <string name="t_avchat_not_start_with_less_member">无法发起，人数少于2人</string>
    <string name="t_avchat_start">发起了视频聊天</string>
    <string name="t_avchat_create_room_fail">创建房间失败</string>
    <string name="t_avchat_push_content">"[网络通话]"</string>
    <string name="t_avchat_join_fail_not_exist">"加入房间失败，房间不存在"</string>


    <!-- NRTC -->
    <string name="nrtc_settings">网络通话设置</string>
    <string name="nrtc_setting_voe">语音通话</string>
    <string name="nrtc_setting_vie">视频通话</string>
    <string name="nrtc_setting_other">其它</string>

    <string name="nrtc_setting_vie_crop_ratio_key">nrtc_setting_vie_crop_ratio_key</string>
    <string name="nrtc_setting_vie_crop_ratio">画面裁剪比例</string>

    <string-array name="nrtc_setting_vie_crop_ratio_entries"> 
        <item>原始比例</item> 
        <item>16:9</item> 
        <item>4:3</item> 
        <item>3:2</item> 
        <item>1:1</item> 
    </string-array>
    <string-array name="nrtc_setting_vie_crop_ratio_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
        <item>4</item> 
    </string-array>


    <string name="nrtc_setting_vie_quality_key">nrtc_setting_vie_quality_key</string>
    <string name="nrtc_setting_vie_quality">视频清晰度</string>
    <string-array name="nrtc_setting_vie_quality_entries"> 
        <item>Default</item> 
        <item>Low</item> 
        <item>Medium</item> 
        <item>High</item> 
        <item>480P</item> 
        <item>720P</item>
    </string-array>
    <string-array name="nrtc_setting_vie_quality_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
        <item>4</item> 
        <item>5</item> 
    </string-array>
    <string-array name="nrtc_setting_vie_hw_encoder_entries"> 
        <item>自动</item> 
        <item>禁用</item> 
        <item>强制</item> 
    </string-array>
    <string-array name="nrtc_setting_vie_hw_encoder_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string-array name="nrtc_setting_other_device_rotation_entries"> 
        <item>0</item> 
        <item>90</item> 
        <item>180</item> 
        <item>270</item> 
    </string-array>
    <string-array name="nrtc_setting_other_device_rotation_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
        <item>3</item> 
    </string-array>
    <string-array name="nrtc_setting_vie_hw_decoder_entries"> 
        <item>自动</item> 
        <item>禁用</item> 
        <item>强制</item> 
    </string-array>
    <string-array name="nrtc_setting_vie_hw_decoder_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string-array name="nrtc_setting_voe_audio_effect_entries"> 
        <item>Disable</item> 
        <item>SDK Built-In</item> 
        <item>Platform Built-In</item> 
    </string-array>
    <string-array name="nrtc_setting_voe_audio_effect_values"> 
        <item>0</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string name="nrtc_setting_other_device_default_rotation_key">nrtc_setting_other_device_default_rotation_key</string>
    <string name="nrtc_setting_other_device_default_rotation">设备默认旋转角度(特殊设备使用)</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset_key">nrtc_setting_other_device_rotation_fixed_offset_key</string>
    <string name="nrtc_setting_other_device_rotation_fixed_offset">设备旋转角度修正偏移量(特殊设备使用)</string>
    <string name="nrtc_setting_vie_rotation_key">nrtc_setting_vie_rotation_key</string>
    <string name="nrtc_setting_vie_rotation">画面旋转</string>
    <string name="nrtc_setting_vie_default_front_camera_key">nrtc_setting_vie_default_front_camera_key</string>
    <string name="nrtc_setting_vie_default_front_camera">默认前置摄像头</string>
    <string name="nrtc_setting_vie_hw_encoder_key">nrtc_setting_vie_hw_encoder_key</string>
    <string name="nrtc_setting_vie_hw_encoder">硬件编码(仅部分设备支持)</string>
    <string name="nrtc_setting_vie_hw_decoder_key">nrtc_setting_vie_hw_decoder_key</string>
    <string name="nrtc_setting_vie_hw_decoder">硬件解码(仅部分设备支持)</string>
    <string name="nrtc_setting_other_server_record_audio_key">nrtc_setting_other_server_record_audio_key</string>
    <string name="nrtc_setting_other_server_record_audio">音频服务器录制</string>
    <string name="nrtc_setting_other_webrtc_compat_key">setting_other_webrtc_compat_key</string>
    <string name="nrtc_setting_other_webrtc_compat">WebRTC兼容</string>
    <string name="nrtc_setting_other_server_record_video_key">nrtc_setting_other_server_record_video_key</string>
    <string name="nrtc_setting_other_server_record_video">视频服务器录制</string>
    <string name="nrtc_setting_voe_call_proximity_key">nrtc_setting_voe_call_proximity_key</string>
    <string name="nrtc_setting_voe_call_proximity">通话期间关闭屏幕</string>
    <string name="nrtc_setting_vie_fps_reported_key">nrtc_setting_vie_fps_reported_key</string>
    <string name="nrtc_setting_vie_fps_reported">帧率汇报</string>
    <string name="nrtc_setting_vie_max_bitrate_key">nrtc_setting_vie_max_bitrate_key</string>
    <string name="nrtc_setting_vie_max_bitrate">码率(Kbps)</string>
    <string name="nrtc_setting_voe_audio_aec_key">nrtc_setting_voe_audio_aec_key</string>
    <string name="nrtc_setting_voe_audio_aec">回音消除</string>
    <string name="nrtc_setting_voe_audio_ns_key">nrtc_setting_voe_audio_ns_key</string>
    <string name="nrtc_setting_voe_audio_ns">降噪</string>
    <string name="nrtc_setting_voe_high_quality_key">nrtc_setting_voe_high_quality_key</string>
    <string name="nrtc_setting_voe_high_quality">高清语音</string>
    <string name="nrtc_setting_voe_dtx_key">nrtc_setting_voe_dtx_key</string>
    <string name="nrtc_setting_voe_dtx">人声检测</string>

</resources>
