<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_333333">

    <TextView
        android:id="@+id/received_call_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="50dip"
        android:text="@string/avchat_audio_call_request"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/refuse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/avchat_refuse_bg_selector"
            android:gravity="center"
            android:text="@string/avchat_refuse"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/avchat_receive_bg_selector"
            android:gravity="center"
            android:text="@string/avchat_pickup"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>